--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
             if (numBalloonsPopped >= numBalloons) {
-                setTimeout(() => {
+             //   setTimeout(() => {
                     document.getElementById('message').style.display = 'block';
                     document.querySelector('.hidden-message').style.display = 'block';
                     document.getElementById('image').style.display = 'block';
-                }, 1000); // 1-second delay
+               // }, 1000); // 1-second delay
             }
         }
     </script>
