--- a/index.html
+++ b/index.html
@@ -208,9 +208,12 @@
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
             if (numBalloonsPopped >= numBalloons) {
-                document.getElementById('message').style.display = 'block';
+                setTimeout(() => {
+                            document.getElementById('message').style.display = 'block';
                 document.querySelector('.hidden-message').style.display = 'block';
                 document.getElementById('image').style.display = 'block';
+                        }, 1000);
+               
             }
         }
     </script>
