--- a/index.html
+++ b/index.html
@@ -208,11 +208,10 @@
         // Check if all balloons are popped
         function checkAllBalloonsPopped() {
             if (numBalloonsPopped >= numBalloons) {
-                setTimeout(() => {
-                            document.getElementById('message').style.display = 'block';
+                 document.getElementById('message').style.display = 'block';
                 document.querySelector('.hidden-message').style.display = 'block';
                 document.getElementById('image').style.display = 'block';
-                        }, 1000);
+              //  setTimeout(() => { }, 1000);
                
             }
         }
