--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     <script>
         const numBalloons = 200;
+        const numBalloonsnew = 204;
         const balloonContainer = document.getElementById('balloons');
         const balloons = [];
         const popSound = document.getElementById('popSound');
@@ -147,7 +148,7 @@
 
         // Heart-shaped pop pattern
         function popRemainingBalloonsHeart() {
-            let heartShape = createHeartShape(numBalloons);
+            let heartShape = createHeartShape(numBalloonsnew);
             let delay = 0;
 
             heartShape.forEach((index) => {
