--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
 
         .hidden-message {
-            display: flex;
+            display: none;
             font-size: 1.5rem;
             color: #333;
             text-align: center;
@@ -49,7 +49,7 @@
         }
 
         #image {
-            display: flex;
+            display: none;
             margin-top: 20px;
             border-radius: 10px;
         }
@@ -80,14 +80,50 @@
                 opacity: 0;
             }
         }
+
+        .card {
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            text-align: center;
+            max-width: 80%;
+        }
+
+        .card h1 {
+            font-size: 2em;
+        }
+
+        .card p {
+            font-size: 1.2em;
+        }
+
+        .card img {
+            max-width: 100%;
+            height: auto;
+            border: 5px solid #f0f0f0;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
     <div id="balloons"></div>
-    <h1 id="message">Happy Birthday, My Love!</h1>
-    <div class="hidden-message">Wishing you a day filled with love and happiness. You are the light of my life, and I cherish every moment with you.</div>
-    <img id="image" src="bucki.jfif" alt="Wife's Picture" width="300px">
-
+    
+     <div class="card">
+        <h1>Happy Birthday 🎂 🎉 Sai Kumar 🎈!</h1>
+        <p>Another year older, but are you any wiser? 😜</p>
+        <p>I wanted to take a moment to wish you a birthday that's as epic as your world tour and as adventurous as your quest for the perfect woman! 🌎💘</p>
+        <p>As you embark on another journey around the sun, may your travels be filled with more incredible stories than Tinder could ever provide! Who knows, maybe this year you'll finally find "the one" on a remote island somewhere - just remember to bring me along as your wingman! 😉</p>
+      <!-- <p>Here is a special gift for you <a href="https://www.amazon.in/g/8INTC14OI7S0U6V4?_encoding=UTF8&asin=B079YZG98M">ClickHere</a></p>-->
+       <p> Enjoy your special day, and let's make sure to celebrate together soon😁😁</p>
+        <div>
+            <!-- Placeholder for an uploaded image -->
+            <img id="image" src="bucki.jfif" alt="Wife's Picture" width="300px">
+        </div>
+        <div>
+            <!-- Add an image upload form here using JavaScript to handle the file upload -->
+        </div>
+    </div>
     <!-- Sound for balloon pop -->
     <audio id="popSound">
         <source src="balloon-pop-48030.mp3" type="audio/mpeg">
