--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         }
 
         .card {
+            display: none;
             background-color: rgba(255, 255, 255, 0.9);
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -119,9 +120,6 @@
         <div>
             <!-- Placeholder for an uploaded image -->
             <img id="image" src="bucki.jfif" alt="Wife's Picture" width="300px">
-        </div>
-        <div>
-            <!-- Add an image upload form here using JavaScript to handle the file upload -->
         </div>
     </div>
     <!-- Sound for balloon pop -->
