--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             background-color: rgba(255, 255, 255, 0.8);
             padding: 10px;
             border-radius: 8px;
+            text-align: center;
         }
 
         .pop {
