--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 </head>
 <body>
     <div id="balloons"></div>
-     <h1 id="message">Happy Birthday 🎂 🎉 Anu🎈!</h1>
+  <!--   <h1 id="message">Happy Birthday 🎂 🎉 Anu🎈!</h1> -->
      <div class="card">
-        <h1 id="message">Happy Birthday 🎂 🎉 Anu🎈!</h1>
+        <h1 id="messages">Happy Birthday 🎂 🎉 Anu🎈!</h1>
      <!--    <p>Another year older, but are you any wiser? 😜</p> -->
         <p class="hidden-message">I wanted to take a moment to wish you a birthday that's as epic as your world tour and as adventurous as your quest for the perfect woman! 🌎💘</p>
         <p>As you embark on another journey around the sun, may your travels be filled with more incredible stories than Tinder could ever provide! Who knows, maybe this year you'll finally find "the one" on a remote island somewhere - just remember to bring me along as your wingman! 😉</p>
@@ -244,7 +244,7 @@
     function checkAllBalloonsPopped() {
         if (numBalloonsPopped >= numBalloons) {
             setTimeout(() => {
-                 document.getElementById('message').style.display = 'block';
+                 document.getElementById('messages').style.display = 'block';
                 document.querySelector('.card').getElementById('message').style.display = 'block';
                 document.querySelector('.card').getElementById('image').style.display = 'block';
             }, 2000);
