--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             height: 130px;
             background-image: url('—Pngtree—red love balloon_4447810.png');
             background-size: cover;
-            cursor: url('https://cdn-icons-png.flaticon.com/512/7180/7180509.png'), auto;
+            cursor: url('—Pngtree—push pin icons and vectors_15756138.png'), auto;
             transition: transform 0.3s ease;
         }
 
