--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
 
         .hidden-message {
-            display: flex;
+            display: none;
             font-size: 1.5rem;
             color: #333;
             text-align: center;
@@ -49,7 +49,7 @@
         }
 
         #image {
-            display: flex;
+            display: none;
             margin-top: 20px;
             border-radius: 10px;
         }
